syntax = "proto3";

package user.v1;

option go_package = "erp.localhost/internal/auth/proto/user/v1;userv1";

message CreateUserRequest {

}

message CreateUserResponse {
    
}

message GetUserRequest {

}

message GetUserResponse {
    
}

message GetUsersRequest {

}

message GetUsersResponse {
    
}

message UpdateUserRequest {

}

message UpdateUserResponse {
    
}

message DeleteUserRequest {

}

message DeleteUserResponse {
    
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}